--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -48,7 +48,7 @@ SUBDIRS += upipe-v210
 endif
 
 if HAVE_BITSTREAM
-SUBDIRS += upipe-ts upipe-framers
+SUBDIRS += upipe-ts upipe-framers upipe-hls
 endif
 
 if HAVE_AVFORMAT
@@ -66,3 +66,4 @@ endif
 if HAVE_ECORE
 SUBDIRS += upump-ecore
 endif
+
