--- a/include/upipe-modules/Makefile.am
+++ b/include/upipe-modules/Makefile.am
@@ -32,6 +32,7 @@ myinclude_HEADERS = \
 	upipe_udp_source.h \
 	upipe_udp_sink.h \
 	upipe_tcp_source.h \
+	upipe_tcp_sink.h \
 	upipe_http_source.h \
 	upipe_rtp_decaps.h \
 	upipe_rtp_prepend.h \
