--- a/lib/upipe-modules/Makefile.am
+++ b/lib/upipe-modules/Makefile.am
@@ -57,7 +57,9 @@ libupipe_modules_la_SOURCES = \
 	upipe_rate_limit.c \
 	upipe_burst.c \
 	upipe_sequential_source.c \
-	upipe_segment_source.c
+	upipe_segment_source.c \
+	upipe_id3v2.c \
+	id3v2.h
 
 if HAVE_WRITEV
 libupipe_modules_la_SOURCES += \
