upipe_vblk: add blank picture generator pipe.
This pipe generates a blank picture according to flow format when input
has no picture.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -99,7 +99,8 @@ check_PROGRAMS = \
 	upipe_audio_bar_test \
 	upipe_audio_graph_test \
 	upipe_filter_blend_test	\
-	upipe_grid_test
+	upipe_grid_test \
+	upipe_video_blank_test
 
 TESTS = \
 	ulist_test \
@@ -154,7 +155,8 @@ TESTS = \
 	upipe_audio_bar_test \
 	upipe_audio_graph_test \
 	upipe_filter_blend_test \
-	upipe_grid_test
+	upipe_grid_test \
+	upipe_video_blank_test
 
 if HAVE_SPEEXDSP
 check_PROGRAMS += \
@@ -477,3 +479,4 @@ ustring_test_CFLAGS = $(AM_CFLAGS) -fno-inline
 upipe_seq_src_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupump_ev.la $(top_builddir)/lib/upipe-modules/libupipe_modules.la
 upipe_void_source_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupump_ev.la $(top_builddir)/lib/upipe-modules/libupipe_modules.la
 upipe_grid_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
+upipe_video_blank_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
