uprobe: add uprobe_alloc to allocate a callback probe

--- a/lib/upipe/Makefile.am
+++ b/lib/upipe/Makefile.am
@@ -16,6 +16,7 @@ libupipe_la_SOURCES = \
 	uref_std.c \
 	uref_uri.c \
 	upipe_dump.c \
+	uprobe.c \
 	uprobe_dejitter.c \
 	uprobe_loglevel.c \
 	uprobe_prefix.c \
