--- a/lib/upipe-modules/Makefile.am
+++ b/lib/upipe-modules/Makefile.am
@@ -70,6 +70,7 @@ libupipe_modules_la_SOURCES = \
 	upipe_void_source.c \
 	upipe_grid.c \
 	upipe_video_blank.c \
+	upipe_audio_blank.c \
 	$(NULL)
 
 if HAVE_WRITEV
