upipe_work: add generic worker pipe
Merge source, linear and sink workers into one generic worker pipe.

--- a/include/upipe-modules/Makefile.am
+++ b/include/upipe-modules/Makefile.am
@@ -22,6 +22,7 @@ myinclude_HEADERS = \
 	upipe_worker_linear.h \
 	upipe_worker_sink.h \
 	upipe_worker_source.h \
+	upipe_worker.h \
 	upipe_htons.h \
 	upipe_chunk_stream.h \
 	upipe_queue_sink.h \
