upipe_xblend: add audio cross blend pipe

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -101,7 +101,8 @@ check_PROGRAMS = \
 	upipe_filter_blend_test	\
 	upipe_grid_test \
 	upipe_video_blank_test \
-	upipe_audio_blank_test
+	upipe_audio_blank_test \
+	upipe_cross_blend_test
 
 TESTS = \
 	ulist_test \
@@ -159,7 +160,8 @@ TESTS = \
 	upipe_grid_test \
 	upipe_video_blank_test \
 	upipe_video_blank_test \
-	upipe_audio_blank_test
+	upipe_audio_blank_test \
+	upipe_cross_blend_test
 
 if HAVE_SPEEXDSP
 check_PROGRAMS += \
@@ -484,3 +486,4 @@ upipe_void_source_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupu
 upipe_grid_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
 upipe_video_blank_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
 upipe_audio_blank_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
+upipe_cross_blend_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
