--- a/lib/upipe-modules/Makefile.am
+++ b/lib/upipe-modules/Makefile.am
@@ -71,6 +71,7 @@ libupipe_modules_la_SOURCES = \
 	upipe_grid.c \
 	upipe_video_blank.c \
 	upipe_audio_blank.c \
+	upipe_cross_blend.c \
 	$(NULL)
 
 if HAVE_WRITEV
