upipe: add void flow def header

--- a/include/upipe/Makefile.am
+++ b/include/upipe/Makefile.am
@@ -106,6 +106,7 @@ pkginclude_HEADERS = \
 	uref_m3u_flow.h \
 	uref_m3u_playlist_flow.h \
 	uref_uri.h \
+	uref_void_flow.h \
 	urequest.h \
 	uring.h \
 	ustring.h \
