--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -180,7 +180,8 @@ check_PROGRAMS += \
 	upipe_worker_sink_test \
 	upipe_worker_source_test \
 	upipe_worker_test \
-	upipe_m3u_reader_test
+	upipe_m3u_reader_test \
+	upipe_void_source_test
 
 TESTS += \
 	upump_ev_test \
@@ -199,7 +200,8 @@ TESTS += \
 	upipe_worker_sink_test \
 	upipe_worker_source_test \
 	upipe_worker_test \
-	upipe_m3u_reader_test.sh
+	upipe_m3u_reader_test.sh \
+	upipe_void_source_test
 
 if HAVE_PTHREAD
 check_PROGRAMS += \
@@ -471,3 +473,4 @@ upump_ecore_test_CFLAGS = $(AM_CFLAGS) $(ECORE_CFLAGS)
 upipe_m3u_reader_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupump_ev.la $(top_builddir)/lib/upipe-modules/libupipe_modules.la
 ustring_test_CFLAGS = $(AM_CFLAGS) -fno-inline
 upipe_seq_src_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupump_ev.la $(top_builddir)/lib/upipe-modules/libupipe_modules.la
+upipe_void_source_test_LDADD = $(LDADD) -lev $(top_builddir)/lib/upump-ev/libupump_ev.la $(top_builddir)/lib/upipe-modules/libupipe_modules.la
