--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -47,6 +47,7 @@ ts2mpthreemulticat_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPE
 ugrid_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEAV_LIBS) $(UPIPEX264_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPESWR_LIBS)
 ugrid_CFLAGS = $(SWSCALE_CFLAGS)
 ts_encrypt_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEDVBCSA_LIBS) $(UPIPEPTHREAD_LIBS) -lpthread
+ts2ts_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPETS_LIBS) $(UPIPEFRAMERS_LIBS)
 
 if HAVE_EV
 if HAVE_WRITEV
@@ -55,6 +56,7 @@ noinst_PROGRAMS += decrypt
 if HAVE_BITSTREAM
 noinst_PROGRAMS += hls2rtp
 endif
+noinst_PROGRAMS += ts2ts
 endif
 
 if HAVE_BITSTREAM
