upipe_audio_copy: add an audio copy pipe
This pipe outputs fixed size sound buffers.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -103,7 +103,8 @@ check_PROGRAMS = \
 	upipe_video_blank_test \
 	upipe_audio_blank_test \
 	upipe_grid_test \
-	upipe_block_to_sound_test
+	upipe_block_to_sound_test \
+	upipe_audio_copy_test
 
 TESTS = \
 	ulist_test \
@@ -160,7 +161,8 @@ TESTS = \
 	upipe_video_blank_test \
 	upipe_audio_blank_test \
 	upipe_grid_test \
-	upipe_block_to_sound_test
+	upipe_block_to_sound_test \
+	upipe_audio_copy_test
 
 if HAVE_SPEEXDSP
 check_PROGRAMS += \
@@ -536,3 +538,4 @@ upipe_ts_split_test_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
 upipe_ts_sync_test_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
 upipe_ts_tdt_decoder_test_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
 upipe_video_trim_test_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
+upipe_audio_copy_test_LDADD = $(LDADD) $(top_builddir)/lib/upipe-modules/libupipe_modules.la
