examples/grid: rename ugrid to grid

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -48,8 +48,8 @@ decrypt_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS)
 mpthree2rtp_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPEAV_LIBS) $(UPIPESWR_LIBS)
 ts2mpthreemulticat_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
 ts2mpthreemulticat_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPETS_LIBS) 
-ugrid_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEAV_LIBS) $(UPIPEX264_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPESWR_LIBS)
-ugrid_CFLAGS = $(AM_CFLAGS) $(SWSCALE_CFLAGS) $(UPIPEAV_CFLAGS)
+grid_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEAV_LIBS) $(UPIPEX264_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPESWR_LIBS)
+grid_CFLAGS = $(AM_CFLAGS) $(SWSCALE_CFLAGS) $(UPIPEAV_CFLAGS)
 ts_encrypt_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEDVBCSA_LIBS) $(UPIPEPTHREAD_LIBS) -lpthread
 
 if HAVE_EV
@@ -79,7 +79,7 @@ if HAVE_SWRESAMPLE
 if HAVE_BITSTREAM
 noinst_PROGRAMS += transcode
 if HAVE_X264
-noinst_PROGRAMS += ugrid
+noinst_PROGRAMS += grid
 endif
 endif
 
