uprobe_blit_prepare: add an upipe_blit probe
This probe catches UPROBE_BLIT_PREAPRE_READY and call
upipe_blit_prepare.

--- a/include/upipe-modules/Makefile.am
+++ b/include/upipe-modules/Makefile.am
@@ -47,6 +47,7 @@ myinclude_HEADERS = \
 	upipe_rtp_opus.h \
 	upipe_rtcp.h \
 	upipe_blit.h \
+	uprobe_blit_prepare.h \
 	upipe_crop.h \
 	upipe_audio_split.h \
 	upipe_videocont.h \
