upipe-av: add upipe_avfilter module

--- a/include/upipe-av/Makefile.am
+++ b/include/upipe-av/Makefile.am
@@ -8,3 +8,7 @@ myinclude_HEADERS = \
 	upipe_avformat_sink.h \
 	upipe_avformat_source.h \
 	uref_av_flow.h
+
+if HAVE_AVFILTER
+myinclude_HEADERS += upipe_avfilter.h
+endif
