Add pipe to drop input when the pump is blocked

--- a/include/upipe-modules/Makefile.am
+++ b/include/upipe-modules/Makefile.am
@@ -86,4 +86,5 @@ myinclude_HEADERS = \
 	upipe_row_split.h \
 	upipe_separate_fields.h \
 	upipe_row_join.h \
+	upipe_discard_blocking.h \
 	$(NULL)
