--- a/configure.ac
+++ b/configure.ac
@@ -175,6 +175,7 @@ AC_CHECK_HEADERS([dlfcn.h], AM_CONDITIONAL(HAVE_DLFCN_H, true), AM_CONDITIONAL(H
 AC_CHECK_HEADERS([amt.h], AM_CONDITIONAL(HAVE_AMT, true), AM_CONDITIONAL(HAVE_AMT, false))
 AC_CHECK_HEADERS([net/netmap.h], AM_CONDITIONAL(HAVE_NETMAP, true), AM_CONDITIONAL(HAVE_NETMAP, false),[#include <stdint.h>
 #include <net/if.h>])
+AC_CHECK_HEADERS([SDL2/SDL.h], AM_CONDITIONAL(HAVE_SDL2, true), AM_CONDITIONAL(HAVE_SDL2, false))
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -261,6 +262,7 @@ AC_CONFIG_FILES([Makefile
                  include/upipe-netmap/Makefile
                  include/upipe-dvbcsa/Makefile
                  include/upipe-ebur128/Makefile
+                 include/upipe-sdl2/Makefile
                  lib/Makefile
                  lib/upipe/Makefile
                  lib/upipe/libupipe.pc
@@ -324,6 +326,8 @@ AC_CONFIG_FILES([Makefile
                  lib/upipe-dvbcsa/libupipe_dvbcsa.pc
                  lib/upipe-ebur128/Makefile
                  lib/upipe-ebur128/libupipe_ebur128.pc
+                 lib/upipe-sdl2/Makefile
+                 lib/upipe-sdl2/libupipe_sdl2.pc
                  x86/Makefile
                  x86/config.asm
                  tests/Makefile
