--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -32,13 +32,16 @@ hls2rtp_LDADD= $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEFRAMERS_LIBS
 hls2rtp_CFLAGS= -fno-strict-aliasing
 glxplay_CFLAGS = $(SWSCALE_CFLAGS)
 glxplay_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPEAV_LIBS) $(UPIPEGL_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPETS_LIBS) -lpthread
-uplay_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPESWR_LIBS) $(UPIPEAV_LIBS) $(UPIPEGL_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPETS_LIBS) $(UPIPESDL2_LIBS) -lpthread
+uplay_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPESWS_LIBS) $(UPIPESWR_LIBS) $(UPIPEAV_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEFRAMERS_LIBS) $(UPIPETS_LIBS) $(UPIPESDL2_LIBS) -lpthread
 dvbsrc_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEPTHREAD_LIBS) $(UPIPEDVB_LIBS) -lpthread
 if HAVE_ALSA
 uplay_LDADD += $(UPIPEALSA_LIBS)
 endif
 if HAVE_AUDIOTOOLBOX
 uplay_LDADD += $(UPIPEOSX_LIBS)
+endif
+if HAVE_GLX
+uplay_LDADD += $(UPIPEGL_LIBS)
 endif
 uplay_CFLAGS = $(AM_CFLAGS) $(UPIPEAV_CFLAGS)
 transcode_LDADD = $(LDADD) $(UPUMPEV_LIBS) $(UPIPEMODULES_LIBS) $(UPIPEAV_LIBS) $(UPIPESWR_LIBS) $(UPIPESWS_LIBS) $(UPIPEFILTERS_LIBS) $(UPIPEFRAMERS_LIBS)
@@ -108,8 +111,8 @@ endif
 
 if HAVE_GLX
 noinst_PROGRAMS += glxplay
-noinst_PROGRAMS += uplay
 endif
+noinst_PROGRAMS += uplay
 endif
 endif # swscale
 
