--- a/include/upipe-av/Makefile.am
+++ b/include/upipe-av/Makefile.am
@@ -8,7 +8,8 @@ myinclude_HEADERS = \
 	upipe_avformat_sink.h \
 	upipe_avformat_source.h \
 	uref_av_flow.h \
-	uref_avfilter_flow.h
+	uref_avfilter_flow.h \
+	ubuf_av.h
 
 if HAVE_AVFILTER
 myinclude_HEADERS += upipe_avfilter.h
