examples: add tssplit example

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -54,6 +54,8 @@ grid_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPI
 grid_CFLAGS = $(AM_CFLAGS) $(SWSCALE_CFLAGS) $(UPIPEAV_CFLAGS)
 ts_encrypt_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEDVBCSA_LIBS) $(UPIPEPTHREAD_LIBS) -lpthread
 ts_encrypt_CFLAGS = $(AM_CFLAGS)
+tssplit_LDADD = $(LDADD) $(UPIPEMODULES_LIBS) $(UPUMPEV_LIBS) $(UPIPETS_LIBS) $(UPIPEFRAMERS_LIBS)
+tssplit_CFLAGS = $(AM_CFLAGS) $(BITSTREAM_CFLAGS)
 
 if HAVE_GCRYPT
 ts_encrypt_CFLAGS += $(LIBGCRYPT_CFLAGS)
@@ -73,6 +75,7 @@ if HAVE_BITSTREAM
 noinst_PROGRAMS += upipe_duration
 noinst_PROGRAMS += ts2es
 noinst_PROGRAMS += ts2mpthreemulticat
+noinst_PROGRAMS += tssplit
 if HAVE_AVFORMAT
 noinst_PROGRAMS += mpthree2rtp
 endif
